kubernetes/apps/crowdsec/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crowdsec-dashboard-ingress
  namespace: crowdsec
spec:
  rules:
  - host: "crowdsec.${ROOT_DOMAIN}"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: crowdsec-service
            port:
              number: 3000
